Migrated to java 7 code