@@ -1,5 +1,8 @@
 package com.github.shankyty.redis;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class CommandImpl implements Command {
@@ -19,11 +22,12 @@ public class CommandImpl implements Command {
 
     @Override
     public List<String> getResponse() {
-        return switch (type) {
-            case ping -> args.isEmpty() ? List.of("PONG") : args;
-            case echo -> args;
-            case unknown -> List.of("ERR unknown command ", args.get(0));
+        switch (type) {
+            case ping : return args.isEmpty() ? Collections.singletonList("PONG") : args;
+            case echo : return args;
+            case unknown : return Arrays.asList("ERR unknown command ", args.get(0));
         };
+        return Collections.emptyList();
     }
 
     public void setArgs(List<String> args) {
